[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disturbance-detection"
version = "0.1.0"
description = "Time-series change & disturbance detection over satellite NDVI cubes (fire / deforestation / drought recovery)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = [
    "remote-sensing",
    "time-series",
    "change-detection",
    "disturbance",
    "ndvi",
    "stac",
    "xarray",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]

# Mirrors the pixi.toml dependency set (pip-installable subset).
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "xarray>=2023.1",
    "dask>=2023.1",
    "rioxarray>=0.13",
    "odc-stac>=0.3",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "ruptures>=1.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[project.scripts]
disturb = "disturb.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/spatial/disturbance-detection"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/disturb"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
