[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-hotspots"
version = "0.1.0"
description = "Rigorous exploratory spatial data analysis: weights, Moran's I, LISA, Getis-Ord Gi*, and optional GWR."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Joseph Mbuh", email = "mbuhjoe48@gmail.com" }]
keywords = ["spatial-statistics", "esda", "morans-i", "lisa", "getis-ord", "gwr", "geospatial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "geopandas>=0.14",
    "shapely>=2.0",
    "libpysal>=4.9",
    "esda>=2.5",
    "splot>=1.1.5",
    "mapclassify>=2.6",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gwr = ["mgwr>=2.2"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
hotspots = "hotspots.cli:main"

[project.urls]
Homepage = "https://github.com/mbongowo/Data-science-Portfolio/tree/main/spatial/spatial-hotspots"
Repository = "https://github.com/mbongowo/Data-science-Portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/hotspots"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "C4", "SIM"]
ignore = ["N803", "N806"]  # allow X, W etc. (math conventions)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
